new project added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<h2>About me</h2>
 							</header>
 							<p>Welcome to my portfolio website! My name is Ojesh Joshi, a recent graduate of Master of Data Science from Deakin University with few years of experiences in Web and Application Development. 
-								I am well acquainted in Excel, SQL, Power BI, Tableau, R and Python. My proficiencies are in data analytics steps: data cleaning and preparation, data analysis and exploration, creating data visualizations, 
+								I am well acquainted in Excel, SQL, Power BI, Tableau, R and Python. My proficiencies are in data analytics processes: data cleaning and preparation, data analysis and exploration, creating data visualizations, 
 								creating dashboards and reports and story-telling.
 							</p>
 							<!-- <ul class="actions">
@@ -53,6 +53,11 @@
 									<a href="https://github.com/ojesh23/InternshipProject_PowerBI" target=”_blank” class="image fit thumb"><img src="images/pbi_dashboard.jpg" alt="" /></a>
 									<h3>Internship Project | Power BI</h3>
 									<p>Different dashboards have been created to generate visual reports to overcome the gaps in the client's existing manual reporting system for government funding requirements.</p>
+								</article>
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="https://github.com/ojesh23/SalesAnalysisProject_SQL_PowerBI" target=”_blank” class="image fit thumb"><img src="images/sales_analysis.png" alt="" /></a>
+									<h3>Passion Project on Sales Analysis | SQL | Power BI</h3>
+									<p>This is a personal project on sales analysis using SQL and Power BI. Three different dashboards are created to showcase sales overview, customer details and product details.</p>
 								</article>
 								<article class="col-6 col-12-xsmall work-item">
 									<a href="https://wp.deakin.edu.au/staticSites/1706630498_ojoshi/1706630498_20201013_200819/live-dashboard/" target=”_blank” class="image fit thumb"><img src="images/uni_ranking_tableau.png" alt="" /></a>
